--- a/dash.html
+++ b/dash.html
@@ -461,7 +461,7 @@
             <div class="fa-1x"> <h5>Last Attendance Report</h5> </div>
 
             <div>
-                <button onclick="window.location.href='Bills.html'" class="rounded p-1 border-0">
+                <button onclick="window.location.href='worehouse.html'" class="rounded p-1 border-0">
                     <i class="fas fa-print"></i> <span class="fs-2"> Attendance Report </span>
                 </button>
             </div>
