--- a/worehouse.html
+++ b/worehouse.html
@@ -84,7 +84,7 @@
           <div class="fa-1x"> <h4>Last Attendance Report</h4> </div>
 
           <div>
-              <button onclick="window.location.href='Bills.html'" class="rounded p-1 border-0">
+              <button onclick="window.location.href=''" class="rounded p-1 border-0">
                   <i class="fas fa-print"></i> <span class="fs-2"> Attendance Report </span>
               </button>
           </div>
