--- a/mission.html
+++ b/mission.html
@@ -139,18 +139,10 @@
                     </div>
                     <div class="col-xl-3 col-md-6">
                         <div class="card bg-pattern">
-
-
-
+                            
                             <div class="form-group m-1">
-                                <!-- <label for="inputState">حالة الصنف</label> -->
-                                <select id="inputState" class="form-control">
-                                    <option selected>Choose Date</option>
-                                    <option>...</option>
-                                    <option>...</option>
-                                </select>
+                                <input type="date" class="w-100 border-1 form-control" name="" id="">
                             </div>
-
 
                         </div>
                     </div>
